# VipaksPlus-test-task

./: README.md
CMakeFiguresSquareSO/: CMakeLists.txt  CMakePresets.json
CMakeFiguresSquareSO/CMakeFiguresSquareSO/: CMakeFiguresSquareSO.cpp
CMakeFiguresSquareSO/FiguresSquareSharedLibrary/: FiguresSquareSharedLibrary.cpp
FiguresSquareApp/: FiguresSquareApp.sln
FiguresSquareApp/FiguresSquareApp/: Figures.cs  FiguresSquareApp.csproj  MainApp.cs
FiguresSquareDLL/: FiguresSquare.cpp  FiguresSquareDLL.sln  FiguresSquareDLL.vcxproj  FiguresSquareDLL.vcxproj.filters
FiguresSquareDLL/x64/Debug/: FiguresSquareDLL.dll.metagen  FiguresSquareDLL.dll.recipe  FiguresSquareDLL.exp  FiguresSquareDLL.vcxproj.FileListAbsolute.txt
FiguresSquareDLL/x64/Debug/FiguresSquareDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FiguresSquareDLL.lastbuildstate  (+4 more)
FiguresSquareDLL/x64/Release/: FiguresSquareDLL.dll.metagen  FiguresSquareDLL.dll.recipe  FiguresSquareDLL.exp  FiguresSquareDLL.lib  FiguresSquareDLL.vcxproj.FileListAbsolute.txt
FiguresSquareLibrary/: FiguresSquareLibrary.sln
FiguresSquareLibrary/FiguresSquareLibrary/: Class1.cs  FiguresSquareLibrary.csproj
FiguresSquareSharedLibrary/: FiguresSquareSharedLibrary.sln
FiguresSquareSharedLibrary/FiguresSquareSharedLibrary/: FiguresSquareSharedLibrary.vcxproj  FiguresSquareSharedLibrary.vcxproj.filters
FiguresSquareSharedLibrary/x64/Debug/: FiguresSquareSharedLibrary.exp  FiguresSquareSharedLibrary.lib
FiguresSquareSharedLibrary/x64/Release/: FiguresSquareSharedLibrary.exp  FiguresSquareSharedLibrary.lib
(+29 files in other folders)
